# checkenv

./: .coveragerc  .coveralls.yml  .editorconfig  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE.md  README.md  SECURITY.md  _env.json  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
checkenv/: __init__.py  exceptions.py
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/reference/: checkenv.rst  index.rst
tests/: test_checkenv.py
tests/fixtures/: invalid.json  valid1.json  valid2.json  valid_no_mandatory.json
