[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "checkenv"
version = "2.0.0"
description = "Ensures specified environment variables are present during runtime"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Kyle Caston", email = "kyle@caston.dev" },
]
dependencies = [
    "colorama>=0.4.6",
    "jsonschema>=4.18",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/kylecaston/checkenv"
Issues = "https://github.com/kylecaston/checkenv/issues"
Repository = "https://github.com/kylecaston/checkenv"

[project.optional-dependencies]
dev = [
    "build>=1.3",
    "coveralls>=4.0",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.8",
    "tox>=4.0",
    "twine>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["checkenv*"]
